--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
   <parent>
     <groupId>org.nuxeo.ecm.platform</groupId>
     <artifactId>nuxeo-features-parent</artifactId>
-    <version>5.6-SNAPSHOT</version>
+    <version>5.8</version>
   </parent>
 
   <artifactId>nuxeo-directory-connector</artifactId>
@@ -35,10 +35,6 @@
       <groupId>commons-lang</groupId>
       <artifactId>commons-lang</artifactId>
       <scope>provided</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.osgi</groupId>
-      <artifactId>osgi-core</artifactId>
     </dependency>
 
     <dependency>
