--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
   <parent>
     <groupId>org.nuxeo.ecm.platform</groupId>
     <artifactId>nuxeo-features-parent</artifactId>
-    <version>5.8</version>
+    <version>5.9.1-SNAPSHOT</version>
   </parent>
 
   <artifactId>nuxeo-directory-connector</artifactId>
